Completed website for large devices

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usability Hub</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href=".css/media-queries.css">
 </head>
 <body>
 
@@ -252,7 +253,7 @@
                         </div>
                     </div>
                     <div class="banner-btn-section flex">    
-                        <a href="#" class="primary-btn">Try the panel calculator</a>
+                        <a href="#" class="primary-btn cal-btn">Try panel calculator</a>
                         <p>or</p>
                         <a href="#" class="secondary-btn">Learn more</a>
                     </div>
