media queries completed

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usability Hub</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href=".css/media-queries.css">
+    <link rel="stylesheet" href="./css/media-queries.css">
 </head>
 <body>
 
@@ -39,6 +39,9 @@
                     <li><a href="#" class="hover-link primary-btn">Sign up</a></li>
                 </ul>
             </div>
+            <a href="#" class="hover-link nav-toggle">
+                <i class="fa-solid fa-bars" style="color: #102a56;"></i>
+            </a>
         </nav>
 
         <!-- Header of the website -->
@@ -213,18 +216,18 @@
                 </a>
             </div>
             <div class="example-cards flex">
-                <div class="ex-card example-item1">
-                    <h3>Can users complete a task in my software interface?</h3>
-                </div>
-                <div class="ex-card example-item2">
-                    <h3>Can users complete a task in my software interface?</h3>
-                </div>
-                <div class="ex-card example-item3">
-                    <h3>Can users complete a task in my software interface?</h3>
-                </div>
-                <div class="ex-card example-item4">
-                    <h3>Can users complete a task in my software interface?</h3>
-                </div>
+                <a class="ex-card example-item1">
+                    <h3 class="example-card-content">Can users complete a task in my software interface?</h3>
+                </a>
+                <a class="ex-card example-item2">
+                    <h3 class="example-card-content">Can users complete a task in my software interface?</h3>
+                </a>
+                <a class="ex-card example-item3">
+                    <h3 class="example-card-content">Can users complete a task in my software interface?</h3>
+                </a>
+                <a class="ex-card example-item4">
+                    <h3 class="example-card-content">Can users complete a task in my software interface?</h3>
+                </a>
             </div>
         </section>
 
@@ -238,14 +241,14 @@
                     <h4>Our panel includes</h4>
                     <div class="panel-feature-section flex">
                         <div class="left-feature-section">
-                            <ul>
+                            <ul class="flex usp-list">
                                 <li>530k+ panel participants</li>
                                 <li>35+ demographic options</li>
                                 <li>Free demographic trageting</li>
                             </ul>
                         </div>
                         <div class="right-feature-section">
-                            <ul>
+                            <ul class="flex usp-list">
                                 <li>Coverage in 100+ countries</li>
                                 <li>Average 2hr turn around time</li>
                                 <li>Response quality guarantee</li>
@@ -255,7 +258,7 @@
                     <div class="banner-btn-section flex">    
                         <a href="#" class="primary-btn cal-btn">Try panel calculator</a>
                         <p>or</p>
-                        <a href="#" class="secondary-btn">Learn more</a>
+                        <a href="#" class="secondary-btn learn-more-btn">Learn more</a>
                     </div>
                 </div>
                 <div class="banner1-img-section side-margin">
